<resources>
    <string name="app_name">Countdowns</string>
    <!-- TODO: Update when appropriate -->
    <string name="app_version">v1.1.0</string>

    <string name="title_activity_main">Countdowns</string>
    <string name="title_activity_countdown_creation">Create a Countdown</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_configure_countdown_widget">Configure widget</string>
    <string name="title_activity_countdown_deep_link">Countdown details</string>

    <string name="title_action_settings">Settings</string>
    <string name="title_action_finish">Finish</string>
    <string name="title_action_share">Share</string>
    <string name="title_action_delete">Delete</string>
    <string name="title_action_sort">Sort</string>
    <string name="title_action_edit">Edit</string>

    <string name="title_dialog_sort_countdowns">Sort countdowns</string>

    <string name="label_drawer_close">Close navigation drawer</string>
    <string name="label_drawer_open">Open navigation drawer</string>

    <!-- Strings for countdown details-->
    <string name="label_countdown_detail_name">Countdown name</string>
    <string name="label_countdown_detail_description">Description</string>
    <string name="label_countdown_detail_start_date">Started on</string>
    <string name="label_countdown_detail_end_date">Ends on</string>

    <!-- Strings for countdown creation -->
    <string name="label_countdown_creation_date">Countdown date</string>
    <string name="label_countdown_creation_title">Countdown title</string>
    <string name="label_countdown_creation_information">Countdown information</string>
    <string name="label_countdown_creation_time">Countdown time</string>

    <string name="label_shortcut_create_countdown_short">New countdown</string>
    <string name="label_shortcut_create_countdown_long">New countdown</string>
    <string name="label_shortcut_create_countdown_disabled">Can\'t create countdown</string>

    <string name="label_configure_widget_create_countdown">Create countdown</string>
    <string name="label_configure_widget_events">Your countdowns</string>

    <string name="label_create_countdown">Create countdown</string>
    <string name="label_create_countdown_detail">Start counting down the days until something important.</string>

    <string name="label_error_countdown_not_exist">This countdown doesn\'t exist.</string>
    <string name="label_countdowns_select">Select items</string>

    <string name="label_share_countdown">Share this countdown</string>

    <string name="label_sort_by_time_created">By time created</string>
    <string name="label_sort_by_time_until">By time until</string>
    <string name="label_sort_by_countdown_length">By countdown length</string>

    <string name="label_error_sign_in_network">Please connect to a network to sign in</string>

    <string-array name="label_sort_by">
        <item>@string/label_sort_by_time_created</item>
        <item>@string/label_sort_by_time_until</item>
        <item>@string/label_sort_by_countdown_length</item>
    </string-array>

    <string name="label_appwidget_list_countdowns">Your countdowns</string>
    <string name="label_appwidget_add">Add widget</string>
    <string name="label_appwidget_countdown_text">%s days</string>
    <string name="label_appwidget_default_text">Some days</string>
    <string name="appwidget_content_description">Days until something important</string>
    <string name="appwidget_countdown_caption">until %s</string>
    <string name="appwidget_countdown_label_dne">Countdown doesn\'t exist</string>
    <string name="appwidget_countdown_label_remove">(You can remove this widget)</string>
    <string name="appwidget_countdown_label_fulfillment">Countdown complete!</string>

    <string name="query_sign_out_long">Would you like to sign out of Countdowns?</string>
    <string name="query_sign_out_short">Sign out?</string>
    <string name="query_reset_app">Reset app?</string>
    <string name="query_dialog_delete_countdown">Sign out?</string>
    <string name="query_dialog_delete_countdown_details">Signing out will remove all your data from this device.</string>

    <string name="content_countdown_detail_amount">%1$s %2$s</string>
    <string name="content_countdown_detail_name">%s</string>
    <string name="content_countdown_detail_description">%s</string>
    <string name="content_countdown_detail_start">%s</string>
    <string name="content_countdown_detail_finish">%s</string>

    <plurals name="countdown_unit_seconds">
        <item quantity="one">%d second left</item>
        <item quantity="other">%d seconds left</item>
    </plurals>
    <plurals name="countdown_unit_minutes">
        <item quantity="one">%d minute left.</item>
        <item quantity="other">%d minutes left</item>
    </plurals>
    <plurals name="countdown_unit_hours">
        <item quantity="one">%d hour left</item>
        <item quantity="other">%d hours left</item>
    </plurals>
    <plurals name="countdown_unit_days">
        <item quantity="one">%d day left</item>
        <item quantity="other">%d days left</item>
    </plurals>
    <plurals name="countdown_unit_weeks">
        <item quantity="one">%d week left</item>
        <item quantity="other">%d weeks left</item>
    </plurals>
    <plurals name="countdown_unit_months">
        <item quantity="one">%d month left</item>
        <item quantity="other">%d months left</item>
    </plurals>
    <plurals name="countdown_unit_years">
        <item quantity="one">%d month left</item>
        <item quantity="other">%d months left</item>
    </plurals>
    <plurals name="countdown_unit_decades">
        <item quantity="one">%d decade left</item>
        <item quantity="other">%d decades left</item>
    </plurals>
    <plurals name="countdown_unit_millennia">
        <item quantity="one">%d millennium left</item>
        <item quantity="other">%d millennia left</item>
    </plurals>

    <!-- Strings for ads-->
    <string name="ad_unit_home_screen_banner" translatable="false">ca-app-pub-3325494412289154/3924849025</string>
    <string name="ad_unit_list_ad_native" translatable="false">ca-app-pub-3325494412289154/5261981425</string>

    <!-- Strings related to Settings -->
    <string name="pref_key_unit_preference" translatable="false">pref_countdownDisplayUnits</string>
    <string name="pref_key_sync_type" translatable="false">pref_syncCalendarType</string>
    <string name="pref_key_sync_system_calendar" translatable="false">pref_syncSystemCalendar</string>

    <string name="unit_type_hours">Hours</string>
    <string name="unit_type_days">Days</string> <!-- This is the default option-->
    <string name="unit_type_weeks">Weeks</string>
    <string name="unit_type_months">Months</string>
    <string name="unit_type_years">Years</string>
    <string name="unit_type_auto">Automatic</string>

    <array name="pref_countdownUnitType_labels">
        <item>@string/unit_type_hours</item>
        <item>@string/unit_type_days</item>
        <item>@string/unit_type_weeks</item>
        <item>@string/unit_type_months</item>
        <item>@string/unit_type_years</item>
        <!-- TODO: Add automatic unit determination -->
        <item>@string/unit_type_auto</item>
    </array>
    <array name="pref_countdownUnitType_summaries">
        <item>Using hours as units</item>
        <item>Using days as units</item>
        <item>Using weeks as units</item>
        <item>Using months as units</item>
        <item>Using years as units</item>
        <!-- TODO: Add automatic unit determination -->
        <item>Automatically determining units</item>
    </array>
    <array name="pref_countdownUnitType_values">
        <item>hours</item>
        <item>days</item>
        <item>weeks</item>
        <item>months</item>
        <item>years</item>
        <item>auto</item>
    </array>

    <string name="pref_resetApp_title">Reset app</string>
    <string name="pref_appVersion_key">pref_appVersion</string>
    <string name="pref_appVersion_title" translatable="false">App version</string>

    <string name="pref_disableAds_key" translatable="false">pref_disableAds</string>
    <string name="pref_disableAds_title">Disable ads</string>

    <string name="response_account_linked">Your account is now linked.</string>


    <!-- Strings for notifications -->
    <string name="channel_app_updates_id" translatable="false">channel_app_updates</string>
    <string name="channel_app_updates_name">App updates</string>
    <string name="channel_app_updates_description">Notices about important app updates or features</string>

    <string name="channel_countdown_updates_id" translatable="false">channel_countdown_updates</string>
    <string name="channel_countdown_updates_name">Countdown notifications</string>
    <string name="channel_countdown_updates_description">Reminders for upcoming countdowns</string>


    <string name="query_reset_app_details">This will delete all preferences you\'ve set and sign you out of the app.</string>
    <string name="sign_in">Please sign in the app.</string>
    <string name="title_activity_configure_widget">ConfigureWidgetActivity</string>
    <string name="search_hint">Search countdowns</string>

</resources>
