<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="pref_root_key">

    <!--<PreferenceCategory android:title="Display preferences">-->

    <!--<android.support.v7.preference.DropDownPreference-->
    <!--android:entries="@array/pref_countdownUnitType_labels"-->
    <!--android:entryValues="@array/pref_countdownUnitType_values"-->
    <!--android:key="@string/pref_key_unit_preference"-->
    <!--android:defaultValue="@string/unit_type_days"-->
    <!--android:title="Unit display type" />-->

    <!--&lt;!&ndash;<android.support.v7.preference.DropDownPreference&ndash;&gt;-->
    <!--&lt;!&ndash;android:key="@string/pref_key_unit_preference"&ndash;&gt;-->
    <!--&lt;!&ndash;android:title="Unit type"&ndash;&gt;-->
    <!--&lt;!&ndash;android:defaultValue="@string/unit_type_days"&ndash;&gt;-->
    <!--&lt;!&ndash;android:entries="@array/pref_countdown_unit_type"&ndash;&gt;-->
    <!--&lt;!&ndash;android:entryValues="@array/pref_countdown_unit_type" />&ndash;&gt;-->

    <!--</PreferenceCategory>-->

    <!--<PreferenceCategory android:title="Syncing">-->

    <!--<SwitchPreference-->
    <!--android:key="@string/pref_key_sync_type"-->
    <!--android:title="Enable calendar syncing" />-->

    <!--&lt;!&ndash;<android.support.v7.preference.CheckBoxPreference&ndash;&gt;-->
    <!--&lt;!&ndash;android:dependency="@string/pref_key_sync_type"&ndash;&gt;-->
    <!--&lt;!&ndash;android:key="@string/pref_key_sync_google_calendar"&ndash;&gt;-->
    <!--&lt;!&ndash;android:title="Sync using Google calendar" />&ndash;&gt;-->

    <!--<CheckBoxPreference-->
    <!--android:dependency="@string/pref_key_sync_type"-->
    <!--android:key="@string/pref_key_sync_system_calendar"-->
    <!--android:title="Sync using system calendar" />-->

    <!--</PreferenceCategory>-->

    <Preference
        android:key="@string/pref_disableAds_key"
        android:title="@string/pref_disableAds_title" />

    <PreferenceCategory android:title="About">

        <Preference
            android:key="@string/pref_appVersion_key"
            android:summary="@string/app_version"
            android:title="@string/pref_appVersion_title">

            <!--TODO: 5/14/17 Re-enable this after a decent marketing website is created -->
            <!--<intent-->
            <!--android:action="android.intent.action.VIEW"-->
            <!--android:data="https://craft-countdown.firebaseapp.com"/>-->

        </Preference>

        <Preference android:title="@string/pref_resetApp_title">
            <intent android:action="com.craft.apps.countdowns.action.ACTION_RESET_APP" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>