<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TODO: Re-enable when appropriate -->
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/title_action_share"
        android:visible="false"
        app:showAsAction="always" />

    <!-- TODO: Add functionality to new fragment-->
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_create_white_24dp"
        android:title="@string/title_action_edit"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/title_action_delete"
        app:showAsAction="ifRoom" />
</menu>