<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/widget_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@color/colorAccent">

    <TextView
        android:id="@+id/appwidget_countdown_title"
        android:textStyle="normal|bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/appwidget_content_description"
        android:elevation="4dp"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
        tools:text="@string/label_appwidget_default_text" />

    <TextView
        android:id="@+id/appwidget_countdown_caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:elevation="4dp"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="?android:attr/textColorPrimaryInverse"
        tools:text="@string/appwidget_countdown_caption" />

</LinearLayout>

