<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.craft.apps.countdowns.CountdownCreationActivity"
    tools:showIn="@layout/activity_countdown_creation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="16dp"
                android:layout_gravity="center_vertical"
                android:alpha="0.54"
                app:srcCompat="@drawable/ic_description_black_24dp"
                tools:ignore="ContentDescription" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_countdown_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_gravity="center_vertical">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_countdown_creation_information"
                    android:inputType="textCapSentences|textAutoCorrect|textAutoComplete|textShortMessage" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/input_countdown_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_vertical"
            android:alpha="0.54"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_date_range_black_24dp"
            android:onClick="onClick"
            android:text="@string/label_countdown_creation_date"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/input_countdown_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_vertical"
            android:alpha="0.54"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_access_time_black_24dp"
            android:onClick="onClick"
            android:text="@string/label_countdown_creation_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
