<?xml version="1.0" encoding="utf-8"?><!-- TODO: 6/30/17 Use responsive layout -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="56dp"
    android:background="#FAFAFA"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior"
    tools:layout_gravity="bottom"
    tools:layout_width="match_parent">
    <!--tools:showIn="@layout/app_bar_main"-->

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_countdown_detail_header"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        tools:layout_marginBottom="0dp" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:id="@+id/countdown_content_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="72dp"
                        android:padding="16dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="16dp"
                            android:layout_gravity="center_vertical"
                            android:alpha="0.54"
                            app:srcCompat="@drawable/ic_event_note_black_24dp"
                            tools:ignore="ContentDescription" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/label_countdown_detail_name"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                            <TextView
                                android:id="@+id/countdown_title_detail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:autoSizeTextType="uniform"
                                tools:text="Release date of The Stanley Parable 2" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/details_description_section"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="16dp"
                            android:layout_gravity="center_vertical"
                            android:alpha="0.54"
                            tools:ignore="ContentDescription" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/label_countdown_detail_description"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                            <TextView
                                android:id="@+id/countdown_description_detail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:autoSizeTextType="uniform"
                                tools:text="This is a very long countdown description for a countdown that is very long." />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="72dp"
                        android:padding="16dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="16dp"
                            android:layout_gravity="center_vertical"
                            android:alpha="0.54"
                            app:srcCompat="@drawable/ic_event_black_24dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/label_countdown_detail_start_date"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                            <TextView
                                android:id="@+id/countdown_start_date_detail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                tools:text="@string/content_countdown_detail_start" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="72dp"
                        android:padding="16dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_marginEnd="16dp"
                            android:layout_gravity="center_vertical"
                            android:alpha="0.54"
                            app:srcCompat="@drawable/ic_event_available_black_24dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/label_countdown_detail_end_date"
                                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                            <TextView
                                android:id="@+id/countdown_finish_date_detail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                tools:text="@string/content_countdown_detail_start" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>
